fix footer alignment

--- a/app/assets/stylesheets/export-components/header-footer/_common.scss
+++ b/app/assets/stylesheets/export-components/header-footer/_common.scss
@@ -15,7 +15,7 @@
 .great-global-header-footer.international .great-global-header-footer-logo {
   margin-top: 11px;
 }
-footer.great-global-header-footer.domestic {
+.great-footer .great-global-header-footer.domestic {
   padding: 20px 0;
   height: fit-content;
 
